  * enh: speed improvements while theme updates;
  * enh: code cleanups;
  * new: walkback() in stdlib;
  * new: math.round;
  * new: std.var for variable extensions;
  * new: instead.clipboard() added (SDL2 only);
  * new: -renderer <opengl|direct3d|software|opengles|opengles2> parameter;
  * new: -nocursor parameter;
  * new: SailfishOS port;
  * new: WinRT patches for upcoming port;

 -- Peter Kosyh <p.kosyh@gmail.com>  Sun, 14 Jan 2018 16:54:00 +0300

3.1.2

  * regression fix in fading and menu;

 -- Peter Kosyh <p.kosyh@gmail.com>  Mon, 21 Aug 2017 16:45:00 +0300

3.1.1

  * regression fix in fading (Android);
  * code cleanups;
  * doc cleanups;

 -- Peter Kosyh <p.kosyh@gmail.com>  Mon, 21 Aug 2017 08:50:00 +0300

3.1.0

  * emscripten port;
  * fix div by zero in rnd;
  * fix in loadmod (from gamefile);
  * fix in path (.walk as function);
  * fixes in doc;
  * code cleanups (compilation warnings);
  * instead.noise1/2/3/4 (Perlin Noise);
  * pixels:scale()/rotate();

 -- Peter Kosyh <p.kosyh@gmail.com>  Sun, 20 Aug 2017 10:16:00 +0300

3.0.1

  * fix segfault while pause/resume;
  * stead3: start() logic fix;

 -- Peter Kosyh <p.kosyh@gmail.com>  Wed, 24 May 2017 21:03:00 +0300

3.0.0

  * refactoring (src/instead);
  * tiny-instead;
  * bug fixes;
  * completely new stead3;
  * sound.load_mem;
  * sprite.pixels;

 -- Peter Kosyh <p.kosyh@gmail.com>  Wed, 19 Apr 2017 17:45:00 +0300

2.4.1

  * sprite from sprite load bug fixed with scaling;
  * fix in themes pager;
  * fix in stead.menu_toggle();
  * memory leak in free_font (sprtites) fixed;
  * new stead.mouse_show();
  * fix in txtnb() escaping;
  * fix in stead.busy();
  * fixes in fonts,cutscene and keyboard example modules;
  * ua -> uk language, fixes in translation;

 -- Peter Kosyh <p.kosyh@gmail.com>  Sat, 16 Apr 2016 13:50:00 +0300

2.4.0

  * txty (iface.y) -- y position in text;
  * menu_toggle ("themes", "settings" added), w/o return to top menu;
  * win.ways.mode = top|bottom in themes;